--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             
             <section class="home22" >
                 <div class="content22">	
-                    <h3 class="heading12" style="font-family: salsa;" >APRENDE A REALIZAR ESTÁS INCREÍBLES ENTRADAS CON AYUDA DE LA FRACTALIDAD DEL MERCADO</h3>            
+                    <h3 class="heading12" style="font-family: salsa;" >APRENDE A REALIZAR ÉSTAS INCREÍBLES ENTRADAS CON AYUDA DE LA FRACTALIDAD DEL MERCADO</h3>            
                    <div class="product1" id="testimonios">
                        <div class="box-container1">
                        <div class="box1">
