--- a/index.html
+++ b/index.html
@@ -522,8 +522,8 @@
    <div id="main-button" class="wave ">
                 <i class="fas fa-comments"></i>
             </div>
-    <button  class="button12"><i class="fas fa-phone-alt"></i> <a target="_blank" href="https://t.me/SoporteTradingNivelFlash">Consulta gratis</a> </button>
-    <a target="_blank" href="https://t.me/SoporteTradingNivelFlash" class="telegram-color"><i class="fab fa-telegram-plane"></i></a>
+    <button  class="button12"><i class="fas fa-phone-alt"></i> <a target="_blank" href="https://t.me/Soportefractaltrading">Consulta gratis</a> </button>
+    <a target="_blank" href="https://t.me/Soportefractaltrading" class="telegram-color"><i class="fab fa-telegram-plane"></i></a>
   </div>
 </div>
 
@@ -531,10 +531,10 @@
 
  <section class="footer">
     <div class="icons">
-        <a target="_blank" href="https://t.me/SoporteTradingNivelFlash" class="fab fa-telegram"></a>
+        <a target="_blank" href="https://t.me/Soportefractaltrading" class="fab fa-telegram"></a>
        
         <br>
-        <h4 style="color:white ;"> &copy; copyright Fractal <span>Trading Latam</span> - 2022 </h1>
+        <h4 style="color:white ;"> &copy; copyright Fractal <span>Latam</span> - 2023 </h1>
 
     </div>
 
