--- a/index.html
+++ b/index.html
@@ -207,37 +207,42 @@
                        <h1 class="heading2" style="font-family: salsa;"  > DISPONIBLE HASTA EL <span>17 DE FEBRERO</span>  </h1>
 
  
+<div class="contenedor2">
+        <div class="contador">
+            <div class="contenido11">
+                <h2>Aprovecha el <ins style="color:rgb(251, 255, 0)"> descuento </ins> antes de cerrar cupos</h2>
+                <div class="responsivo1">
+                    <div class="cartel">
+                        <div id="dias"></div>
+                        <div class="h3">
+                            <h3>Días</h3>
+                        </div>
+                    </div>
+                    <div class="cartel">
+                        <div id="horas"></div>
+                        <div class="h3">
+                            <h3>Horas</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="responsivo2">
+                    <div class="cartel">
+                        <div id="minutos"></div>
+                        <div class="h3">
+                            <h3>Minutos</h3>
+                        </div>
+                    </div>
+                    <div class="cartel">
+                        <div id="segundos"></div>
+                        <div class="h3">
+                            <h3>Segundos</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
- <div class="contenedor"> 
-        <div class="contenido">
-          <div class="contador">
-            <div class="contenido11" >
-                <h2  >Aprovecha el <ins style="color: red;" > 15% de descuento </ins>  por <br> tiempo limitado</h2>
-            <div class="responsivo1">
-              <div class="cartel">
-              <div id="dias"></div>
-              <div class="h3"><h3>Días</h3></div>
-            </div>
-              <div class="cartel">
-              <div id="horas"></div>
-              <div class="h3"><h3>Horas</h3></div>
-            </div>
-            </div>
-            <div class="responsivo2">
-            <div class="cartel">
-              <div id="minutos"></div>
-              <div class="h3"><h3>Minutos</h3></div>
-            </div>
-            <div class="cartel">
-              <div id="segundos"></div>
-              <div class="h3"><h3>Segundos</h3></div>
-            </div>
-            </div>
-        </div>
-          </div>
-        </div>
-    
-      </div>
 
            <br>
 	<br>
