--- a/index.html
+++ b/index.html
@@ -273,10 +273,10 @@
         <!-- Lista de Caracteristicas / Propiedades -->
         <ul class="table-list">
             <li>✅Señales de lunes a viernes (x 3 meses) </li>
-            <li>✅Comunidad de alumnos </li>
+            <li>✅Videos iniciales </li>
+            <li>✅Psicología en el trading <span></span></li>
             <li>✅Plan de trading <span></span></li>
             <li>✅Bitácora <span></span></li>
-            <li>✅Videos iniciales <span></span></li>
             <li>✅Soporte 24/7<span></span></li>
             <li>❌Sin acceso al curso<span></span></li>
         </ul>
@@ -292,11 +292,12 @@
         <!-- Lista de Caracteristicas / Propiedades -->
         <ul class="table-list">
             <li>✅Acceso a nuestro curso + certificado (De por vida) </li>
+		 <li>✅Psicología en el trading <span></span></li>
+		 <li>✅Actualizaciones y repasos <span></span></li>
             <li>✅Señales de lunes a viernes (x 3 meses) </li>
             <li>✅Estrategias de trading  </li>
             <li>✅Plan de trading + Bitácora <span></span></li>
             <li>✅Biblioteca online <span></span></li>
-          <li>✅Comunidad de alumnos <span></span></li>
           <li>✅Soporte 24/7<span></span></li>
            
        </ul>
@@ -478,7 +479,7 @@
     </div>
 
     <div class="contenido animacionContenido">
-        ✅ Tendrás acceso a más de 16 módulos en donde encontraras un total de 30 lecciones con contenido de excelentísima calidad
+        ✅ Tendrás acceso a más de 7 módulos en donde encontraras más de 23 lecciones con contenido de excelentísima calidad
     </div>
    
     <div class="cabAcordeon">
@@ -489,11 +490,12 @@
     </div>
     
     <div class="contenido animacionContenido">
-<span>Módulo 1:</span><br> • Configurar y conocer el broker <br>
-• Abre una cuenta en el Broker<br> • Configuraciones adicionales<br>
-• Cómo usar el graficador<br> <br>
-<span>Módulo 2:</span><br> • Introducción a los mercados financieros
-<br> <br>
+<span>Módulo 1:</span><br> • Introducción y acceso a los canales <br>
+ <br>
+<span>Módulo 2:</span><br> • Crear cuenta y configuraciones
+<br> • Herramientas del bróker 
+<br> • Aprende a operar nuestras señales (PARTE 1) <br> • Aprende a operar nuestras señales (PARTE 2)
+<br> 
 <span>Módulo 3:</span><br> • Qué son y qué nos dicen las Velas Japonesas
 <br> <br>
 <span>Módulo 4:</span><br> • Tendencias <br> • Lateralidades, Cómo operar en Tendencias <br> • Marcación correcta de líneas de Tendencia <br> <br>
