--- a/index.html
+++ b/index.html
@@ -495,24 +495,26 @@
 <span>Módulo 2:</span><br> • Crear cuenta y configuraciones
 <br> • Herramientas del bróker 
 <br> • Aprende a operar nuestras señales (PARTE 1) <br> • Aprende a operar nuestras señales (PARTE 2)
-<br> 
+<br> <br> 
 <span>Módulo 3:</span><br> • Qué son y qué nos dicen las Velas Japonesas
+<br> Introducción a los mercados financieros
+<br>Formación y desarrollo de las velas japonesas
+<br>Primeros pasos al momento de analizar 
+<br <br>
+<span>Módulo 4:</span><br> •Mejora la gestión del dinero <br> • Psicología en el trading  <br> <br>
+<span>Módulo 5:</span><br>• Estructura del mercado <br> • Soportes y resistencias efectivos  <br> • Soportes y Resistencias Microtendenciales <br> • Líneas de tendencia + fractalidad <br> • Análisis básico  <br> • Zonas institucionales  <br> • El secreto de las rupturas de zonas
 <br> <br>
-<span>Módulo 4:</span><br> • Tendencias <br> • Lateralidades, Cómo operar en Tendencias <br> • Marcación correcta de líneas de Tendencia <br> <br>
-<span>Módulo 5:</span><br>• Qué son y para qué sirven los soportes y las resistencias <br> • Rompimientos de Soportes y Resistencias <br> • Soportes y Resistencias Microtendenciales
-
-<br> <br>
-<span>Módulo 6:</span><br>•  Qué son las Zonas Institucionales y cómo se operan <br> <br>
-<span>Módulo 7:</span><br>•  Conoce todo sobre los patrones de Velas <br> <br>
-<span>Módulo 8:</span><br>•  Operativa con velas maestras <br> <br>
-<span>Módulo 9:</span><br>•  Operativa con bandas de congestión <br> <br>
-<span>Módulo 10:</span><br>•  Operativas en zonas relevantes <br> <br>
-<span>Módulo 11:</span> <br>• Operativa en canales <br> <br>
-<span>Módulo 12:</span> <br>• Operativa en ventanas de oportunidad<br> <br>
-<span>Módulo 13:</span> <br>• Interés compuesto <br> <br>
-<span>Módulo 14:</span> <br>• Plan de trading <br> • Mejora tu termostato financiero <br> <br>
-<span>Módulo 15:</span><br>• Nivel Ninja <br> •  Cómo operar en Ráfaga <br> • El verdadero apoyo de una Media Móvil<br> • Media Móvil 20 + 8 periodos <br> • Cuadrícula IQ Option<br> • La fractalidad del mercado <br> • Anulación de Movimiento<br> <br>
-<span>Módulo 16:</span><br> • 7 clases analizando el mercado <br> <br>
+<span>Módulo 6:</span><br>•  Patrones de vela (PARTE 1) <br> Patrones de vela (PARTE 2) <br> Patrones de vela (PARTE 3) <br> <br>
+<span>Módulo 7:</span><br>• Estrategia media móvil  <br> <br>
+<span>Módulo 8:</span><br>•   <br> <br>
+<span>Módulo 9:</span><br>•   <br> <br>
+<span>Módulo 10:</span><br>•   <br> <br>
+<span>Módulo 11:</span> <br>•  <br> <br>
+<span>Módulo 12:</span> <br>•  <br> <br>
+<span>Módulo 13:</span> <br>•  <br> <br>
+<span>Módulo 14:</span> <br>•  <br> <br> <br>
+<span>Módulo 15:</span><br>•  <br> <br> 
+<span>Módulo 16:</span><br> •  <br> <br>
     
 
 </div>
