--- a/index.html
+++ b/index.html
@@ -497,11 +497,11 @@
 <br> • Aprende a operar nuestras señales (PARTE 1) <br> • Aprende a operar nuestras señales (PARTE 2)
 <br> <br> 
 <span>Módulo 3:</span><br> • Qué son y qué nos dicen las Velas Japonesas
-<br> Introducción a los mercados financieros
-<br>Formación y desarrollo de las velas japonesas
-<br>Primeros pasos al momento de analizar 
-<br <br>
-<span>Módulo 4:</span><br> •Mejora la gestión del dinero <br> • Psicología en el trading  <br> <br>
+<br> • Introducción a los mercados financieros
+<br>• Formación y desarrollo de las velas japonesas
+<br>• Primeros pasos al momento de analizar 
+<br <br> <br>
+<span>Módulo 4:</span><br> • Mejora la gestión del dinero <br> • Psicología en el trading  <br> <br>
 <span>Módulo 5:</span><br>• Estructura del mercado <br> • Soportes y resistencias efectivos  <br> • Soportes y Resistencias Microtendenciales <br> • Líneas de tendencia + fractalidad <br> • Análisis básico  <br> • Zonas institucionales  <br> • El secreto de las rupturas de zonas
 <br> <br>
 <span>Módulo 6:</span><br>•  Patrones de vela (PARTE 1) <br> Patrones de vela (PARTE 2) <br> Patrones de vela (PARTE 3) <br> <br>
