--- a/index.html
+++ b/index.html
@@ -504,17 +504,12 @@
 <span>Módulo 4:</span><br> • Mejora la gestión del dinero <br> • Psicología en el trading  <br> <br>
 <span>Módulo 5:</span><br>• Estructura del mercado <br> • Soportes y resistencias efectivos  <br> • Soportes y Resistencias Microtendenciales <br> • Líneas de tendencia + fractalidad <br> • Análisis básico  <br> • Zonas institucionales  <br> • El secreto de las rupturas de zonas
 <br> <br>
-<span>Módulo 6:</span><br>•  Patrones de vela (PARTE 1) <br> Patrones de vela (PARTE 2) <br> Patrones de vela (PARTE 3) <br> <br>
+<span>Módulo 6:</span><br>•  Patrones de vela (PARTE 1) <br>• Patrones de vela (PARTE 2) <br> • Patrones de vela (PARTE 3) <br> <br>
 <span>Módulo 7:</span><br>• Estrategia media móvil  <br> <br>
-<span>Módulo 8:</span><br>•   <br> <br>
-<span>Módulo 9:</span><br>•   <br> <br>
-<span>Módulo 10:</span><br>•   <br> <br>
-<span>Módulo 11:</span> <br>•  <br> <br>
-<span>Módulo 12:</span> <br>•  <br> <br>
-<span>Módulo 13:</span> <br>•  <br> <br>
-<span>Módulo 14:</span> <br>•  <br> <br> <br>
-<span>Módulo 15:</span><br>•  <br> <br> 
-<span>Módulo 16:</span><br> •  <br> <br>
+<span>Módulo 8:</span><br>• Próximos  <br> <br>
+<span>Módulo 9:</span><br>•  Próximos <br> <br>
+<span>Módulo 10:</span><br>• Próximos  <br> <br>
+
     
 
 </div>
