--- a/index.html
+++ b/index.html
@@ -500,6 +500,7 @@
 <br> <br> 
 <span>Módulo 3:</span><br> • Qué son y qué nos dicen las Velas Japonesas
 <br> • Introducción a los mercados financieros
+<br>  • La historia del trading
 <br>• Formación y desarrollo de las velas japonesas
 <br>• Primeros pasos al momento de analizar 
 <br <br> <br>
