--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
             <li>✅Bitácora <span></span></li>
             <li>✅Soporte 24/7<span></span></li>
             <li>❌Sin acceso al curso<span></span></li>
+		 <li>❌Sin actualizaciones<span></span></li>
         </ul>
         <!-- Contratar / Comprar -->
         <div class="table-buy">
@@ -422,7 +423,7 @@
 <br>
 <br>
 
- <a href=""><h4 style="text-align: center; color:#e5ff00; text-decoration: underline; " > 👉 ¡Quiero Inscribirme Ya! 👈 </h4></a> 
+ <a href="https://pay.hotmart.com/W79687857T?off=4v6p3us7&checkoutMode=10"><h4 style="text-align: center; color:#e5ff00; text-decoration: underline; " > 👉 ¡Quiero Inscribirme Ya! 👈 </h4></a> 
     </div>
 
     <div class="cabAcordeon">
