--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <!-- Contratar / Comprar -->
         <div class="table-buy">
             <p>$29<sup>/ 3 meses</sup></p>
-            <a target="_blank" href="https://pay.hotmart.com/W79687857T?off=x8o33vqz" class="pricing-action">Comprar</a>
+            <a target="_blank" href="https://pay.hotmart.com/W79687857T?off=x8o33vqz&checkoutMode=10" class="pricing-action">Comprar</a>
         </div>
     </div>
   
