--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         </ul>
         <!-- Contratar / Comprar -->
         <div class="table-buy">
-            <p>$29<sup>/ 3 meses</sup></p>
+            <p>$29<sup><span style="text-decoration: line-through; color: black;">/ $59USD</span></sup></p>
             <a target="_blank" href="https://pay.hotmart.com/W79687857T?off=x8o33vqz&checkoutMode=10" class="pricing-action">Comprar</a>
         </div>
     </div>
@@ -306,7 +306,7 @@
        </ul>
         <!-- Contratar / Comprar -->
         <div class="table-buy">
-            <p>$75<sup>/ De por vida</sup></p>
+            <p>$75<sup><span style="text-decoration: line-through; color: black;">/ $149USD</span></sup></p>
             <a target="_blank" href="https://pay.hotmart.com/W79687857T?off=4v6p3us7&checkoutMode=10" class="pricing-action">Comprar</a>
         </div>
     </div>
