--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     </div>
                     </div>
                     <br>
-                       <h1 class="heading2" style="font-family: salsa;"  > DISPONIBLE HASTA EL <span>23 DE MARZO</span>  </h1>
+                       <h1 class="heading2" style="font-family: salsa;"  > DISPONIBLE HASTA EL <span>4 DE ABRIL</span>  </h1>
 
  
 <div class="contenedor2">
