--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   
    <header>
-        <h2 class="logoimg" style="font-family: salsa;" >¡ÚNETE HOY A FRACTAL LATAM CON LA <span class="logospan   " style="font-family: salsa;" >PROMOCIÓN DE MARZO! <span></h2>
+        <h2 class="logoimg" style="font-family: salsa;" >¡ÚLTIMO DÍA PARA PODER ACCEDER A <span class="logospan   " style="font-family: salsa;" >FRACTAL LATAM! <span></h2>
            </header>
     <hr>        
 
