--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   
    <header>
-        <h2 class="logoimg" style="font-family: salsa;" >¡ÚLTIMO DÍA PARA PODER ACCEDER A <span class="logospan   " style="font-family: salsa;" >FRACTAL LATAM! <span></h2>
+        <h2 class="logoimg" style="font-family: salsa;" >¡PUERTAS ABIERTAS PARA PODER ACCEDER A <span class="logospan   " style="font-family: salsa;" >FRACTAL LATAM! <span></h2>
            </header>
     <hr>        
 
@@ -206,7 +206,7 @@
                     </div>
                     </div>
                     <br>
-                       <h1 class="heading2" style="font-family: salsa;"  > DISPONIBLE HASTA EL <span>4 DE ABRIL</span>  </h1>
+                       <h1 class="heading2" style="font-family: salsa;"  > DISPONIBLE HASTA EL <span>18 DE ABRIL</span>  </h1>
 
  
 <div class="contenedor2">
