--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     <!-- Titulo -->
 
     <div class="pricing-table">
-        <h3 class="pricing-title">  Pack señales</h3>
+        <h3 class="pricing-title">  Señales x3 meses</h3>
         <!-- Lista de Caracteristicas / Propiedades -->
         <ul class="table-list">
             <li>✅Señales de lunes a viernes (x 3 meses) </li>
@@ -287,6 +287,26 @@
         <div class="table-buy">
             <p>$29<sup><span style="text-decoration: line-through; color: black;">/ $59USD</span></sup></p>
             <a target="_blank" href="https://pay.hotmart.com/W79687857T?off=x8o33vqz&checkoutMode=10" class="pricing-action">Comprar</a>
+        </div>
+    </div>
+	
+	   <div class="pricing-table">
+        <h3 class="pricing-title">  Señales x6 meses</h3>
+        <!-- Lista de Caracteristicas / Propiedades -->
+        <ul class="table-list">
+            <li>✅Señales de lunes a viernes (x 6 meses) </li>
+            <li>✅Videos iniciales </li>
+            <li>✅Psicología en el trading <span></span></li>
+            <li>✅Plan de trading <span></span></li>
+            <li>✅Bitácora + Biblioteca <span></span></li>
+            <li>✅Soporte 24/7<span></span></li>
+            <li>❌Sin acceso al curso<span></span></li>
+		 <li>❌Sin actualizaciones<span></span></li>
+        </ul>
+        <!-- Contratar / Comprar -->
+        <div class="table-buy">
+            <p>$38<sup><span style="text-decoration: line-through; color: black;">/ $75USD</span></sup></p>
+            <a target="_blank" href="https://pay.hotmart.com/W79687857T?off=cyyop3t5" class="pricing-action">Comprar</a>
         </div>
     </div>
   
