--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   
    <header>
-        <h2 class="logoimg" style="font-family: salsa;" >¡PUERTAS ABIERTAS PARA PODER ACCEDER A <span class="logospan   " style="font-family: salsa;" >FRACTAL LATAM! <span></h2>
+        <h2 class="logoimg" style="font-family: salsa;" >¡ÚLTIMO DÍA PARA PODER ACCEDER A <span class="logospan   " style="font-family: salsa;" >FRACTAL LATAM! <span></h2>
            </header>
     <hr>        
 
@@ -206,7 +206,7 @@
                     </div>
                     </div>
                     <br>
-                       <h1 class="heading2" style="font-family: salsa;"  > DISPONIBLE HASTA EL <span> 1 DE MAYO</span> O HASTA AGOTAR CUPOS </h1>
+                       <h1 class="heading2" style="font-family: salsa;"  > DISPONIBLE HASTA LAS <span> 11:59 DEL DÍA DE HOY</span> O HASTA AGOTAR CUPOS </h1>
 
  
 <div class="contenedor2">
