--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
   </section>
 
     
-<h1 class="heading1"style="font-family: salsa;" >SÍ TE REGISTRAS AHORA <span>PODRÁS AHORRAR UN 50%</span> EN EL PROGRAMA DE FRACTAL LATAM ⚡ </h1>
+<h1 class="heading1"style="font-family: salsa;" > REGISTRATE AHORA <span>Y AHORRA UN 50%</span> EN EL PROGRAMA DE FRACTAL LATAM ⚡ </h1>
 <br>
 <br>
 
