--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     </div>
                     </div>
                     <br>
-                       <h1 class="heading2" style="font-family: salsa;"  > DISPONIBLE HASTA LAS <span> 11:59 DEL DÍA DE HOY</span> O HASTA AGOTAR CUPOS </h1>
+                       <h1 class="heading2" style="font-family: salsa;"  > DISPONIBLE HASTA EL <span> 18 DE MAYO </span> ¡NO TE QUEDES FUERA! </h1>
 
  
 <div class="contenedor2">
@@ -372,7 +372,7 @@
   </section>
 
     
-<h1 class="heading1"style="font-family: salsa;" > REGISTRATE AHORA <span>Y AHORRA UN 50%</span> EN EL PROGRAMA DE FRACTAL LATAM ⚡ </h1>
+<h1 class="heading1"style="font-family: salsa;" >⚡ REGISTRATE AHORA <span>Y AHORRA UN 50%</span> EN EL PROGRAMA DE FRACTAL LATAM ⚡ </h1>
 <br>
 <br>
 
