--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   
    <header>
-        <h2 class="logoimg" style="font-family: salsa;" >¡DESCUENTO ESPECIAL POR EL DÍA <span class="logospan" style="font-family: salsa;"> DE LAS MADRES </span> NO TE QUEDES SIN TU CUPO!</h2>
+        <h2 class="logoimg" style="font-family: salsa;" >¡DESCUENTO ESPECIAL POR EL DÍA <span class="logospan" style="font-family: salsa;"> DE LAS MADRES! </span> </h2>
            </header>
     <hr>        
 
