--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       <!-- Contratar / Comprar -->
       <div class="table-buy">
           <p>$47<sup><span style="text-decoration: line-through; color: black;">/ $79USD</span></sup></p>
-          <a target="_blank" href="https://botautomaticoparatrading.netlify.app/" class="pricing-action">Comprar</a>
+          <a target="_blank" href="https://bot-fractal-latam.netlify.app" class="pricing-action">Comprar</a>
       </div>
   </div>
 </div>
