--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
        <div class="product1" id="testimonios">
            <div class="box-container1">
            <div class="box1">
-                  <img width="100%" height="100%"  src=".//img/1.png" alt="Estrategias digitales"></img>
+                  <img width="100%" height="100%"  src=".//img/img/⚠️ EURJPY se dió ganadisima en nuestro punto de entrada. Por el contrario AUDCAD en el último minuto cerró negativa. Luego de esa vela respetó el análisis. Nos retiramos 1-1 el día de hoy, no desesperen y mire (17).pngg" alt="Estrategias digitales"></img>
                </div>
                <div class="box1">
                 <img  width="100%" height="100%" src="./img/2.png" alt="Estrategias digitales"></img>
