--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   
    <header>
-        <h2 class="logoimg" style="font-family: salsa;" >¡ACCEDE HOY A FRACTAL LATAM CON UN <span class="logospan" style="font-family: salsa;"> DESCUENTO ESPECIAL! </span> </h2>
+        <h2 class="logoimg" style="font-family: salsa;" >¡ACCEDE HOY A FRACTAL LATAM CON UN <span class="logospan" style="font-family: salsa;"> DESCUENTO ESPECIAL! </span> ÚLTIMO DÍA DISPONIBLE </h2>
            </header>
     <hr>        
 
@@ -206,7 +206,7 @@
                     </div>
                     </div>
                     <br>
-                       <h1 class="heading2" style="font-family: salsa;"  > DISPONIBLE HASTA EL <span> 2 DE JUNIO </span> ¡NO TE QUEDES FUERA! </h1>
+                       <h1 class="heading2" style="font-family: salsa;"  > DISPONIBLE HASTA EL <span> 15 DE JUNIO </span> ¡NO TE QUEDES FUERA! </h1>
 
  
 <div class="contenedor2">
@@ -458,17 +458,17 @@
        <div class="product1" id="testimonios">
            <div class="box-container1">
            <div class="box1">
-                  <img width="100%" height="100%"  src=".//img/img/⚠️ EURJPY se dió ganadisima en nuestro punto de entrada. Por el contrario AUDCAD en el último minuto cerró negativa. Luego de esa vela respetó el análisis. Nos retiramos 1-1 el día de hoy, no desesperen y mire (17).pngg" alt="Estrategias digitales"></img>
+                  <img width="100%" height="100%"  src=".//img/1.jpeg" alt="Estrategias digitales"></img>
                </div>
                <div class="box1">
-                <img  width="100%" height="100%" src="./img/2.png" alt="Estrategias digitales"></img>
+                <img  width="100%" height="100%" src="./img/2.jpeg" alt="Estrategias digitales"></img>
                 
             </div>
             <div class="box1">
-                <img  width="100%" height="100%" src="./img/3.png" alt="Estrategias digitales"></img>
+                <img  width="100%" height="100%" src="./img/3.jpeg" alt="Estrategias digitales"></img>
             </div>
             <div class="box1">
-                <img  width="100%" height="100%" src="./img/4.png" alt="Estrategias digitales"></img>
+                <img  width="100%" height="100%" src="./img/4.jpeg" alt="Estrategias digitales"></img>
             </div>
     
            </div>
