--- a/index.html
+++ b/index.html
@@ -492,17 +492,17 @@
            <div class="product1" id="testimonios">
                <div class="box-container1">
                <div class="box1">
-                      <img width="100%" height="100%"  src=".//img/test.png" alt="Estrategias digitales"></img>
+                      <img width="100%" height="100%"  src=".//img/photo1685720433.jpeg" alt="Estrategias digitales"></img>
                    </div>
                    <div class="box1">
-                    <img  width="100%" height="100%" src="./img/test1.png" alt="Estrategias digitales"></img>
+                    <img  width="100%" height="100%" src="./img/photo1685720433 (2).jpeg" alt="Estrategias digitales"></img>
                     
                 </div>
                 <div class="box1">
-                    <img  width="100%" height="100%" src="./img/text4.png" alt="Estrategias digitales"></img>
+                    <img  width="100%" height="100%" src="./img/photo1685720433 (3).jpeg" alt="Estrategias digitales"></img>
                 </div>
                 <div class="box1">
-                    <img  width="100%" height="100%" src="./img/text3.png" alt="Estrategias digitales"></img>
+                    <img  width="100%" height="100%" src="./photo1685720433 (4).jpeg" alt="Estrategias digitales"></img>
                 </div>
         
                </div>
