--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                     <img  width="100%" height="100%" src="./img/photo1685720433 (3).jpeg" alt="Estrategias digitales"></img>
                 </div>
                 <div class="box1">
-                    <img  width="100%" height="100%" src="./photo1685720433 (1).jpeg" alt="Estrategias digitales"></img>
+                    <img  width="100%" height="100%" src="./img/photo1685720433 (4).jpeg" alt="Estrategias digitales"></img>
                 </div>
         
                </div>
