--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   
    <header>
-        <h2 class="logoimg" style="font-family: salsa;" >¡ACCEDE HOY A FRACTAL LATAM CON UN <span class="logospan" style="font-family: salsa;"> DESCUENTO ESPECIAL! </span> ÚLTIMO DÍA DISPONIBLE </h2>
+        <h2 class="logoimg" style="font-family: salsa;" >¡ACCEDE HOY A FRACTAL LATAM CON UN <span class="logospan" style="font-family: salsa;"> DESCUENTO ESPECIAL! </span> </h2>
            </header>
     <hr>        
 
@@ -206,7 +206,7 @@
                     </div>
                     </div>
                     <br>
-                       <h1 class="heading2" style="font-family: salsa;"  > DISPONIBLE HASTA EL <span> 15 DE JUNIO </span> ¡NO TE QUEDES FUERA! </h1>
+                       <h1 class="heading2" style="font-family: salsa;"  > DISPONIBLE HASTA EL <span> 3 DE JulIO </span> ¡NO TE QUEDES FUERA! </h1>
 
  
 <div class="contenedor2">
