--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   
    <header>
-        <h2 class="logoimg" style="font-family: salsa;" >¡ACCEDE HOY A FRACTAL LATAM CON UN <span class="logospan" style="font-family: salsa;"> DESCUENTO ESPECIAL! </span> </h2>
+        <h2 class="logoimg" style="font-family: salsa;" >¡ÚLTIMA OPORTUNIDA PARA ACCEDER A FRACTAL LATAM CON UN <span class="logospan" style="font-family: salsa;"> DESCUENTO ESPECIAL! </span> </h2>
            </header>
     <hr>        
 
