--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   
    <header>
-        <h2 class="logoimg" style="font-family: salsa;" >¡ÚLTIMA OPORTUNIDAD PARA ACCEDER A FRACTAL LATAM CON UN <span class="logospan" style="font-family: salsa;"> DESCUENTO ESPECIAL! </span> </h2>
+        <h2 class="logoimg" style="font-family: salsa;" >¡ACCEDE HOY A FRACTAL LATAM ANTES DE <span class="logospan" style="font-family: salsa;"> AGOTAR CUPOS! </span> </h2>
            </header>
     <hr>        
 
@@ -231,10 +231,11 @@
     <!-- Titulo -->
 
       <div class="pricing-table">
-        <h3 class="pricing-title">Todo incluido</h3>
+        <h3 class="pricing-title">Todo incluído</h3>
         <!-- Lista de Caracteristicas / Propiedades -->
         <ul class="table-list">
             <li>✅Acceso a nuestro curso + certificado (De por vida) </li>
+		<li>✅Servicio automático (BOT) </li>
 		<li>✅Señales de lunes a viernes (x 6 meses) </li>
 		<li>✅Psicología en el trading <span></span></li>
 		 <li>✅Actualizaciones y repasos <span></span></li>           
@@ -247,7 +248,7 @@
         <!-- Contratar / Comprar -->
         <div class="table-buy">
             <p>$75<sup><span style="text-decoration: line-through; color: black;">/ $149USD</span></sup></p>
-            <a target="_blank" href="https://pay.hotmart.com/W79687857T?off=4v6p3us7&checkoutMode=10" class="pricing-action">Comprar</a>
+            <a target="_blank" href="https://payment.hotmart.com/next/W79687857T?off=m5iqjym9&checkoutMode=10&bid=169057156704810&bid=1690569217596&offDiscount=MITAD" class="pricing-action">Comprar</a>
         </div>
     </div>
 	
@@ -267,7 +268,7 @@
         <!-- Contratar / Comprar -->
         <div class="table-buy">
             <p>$38<sup><span style="text-decoration: line-through; color: black;">/ $75USD</span></sup></p>
-            <a target="_blank" href="https://pay.hotmart.com/W79687857T?off=cyyop3t5" class="pricing-action">Comprar</a>
+            <a target="_blank" href="https://payment.hotmart.com/next/W79687857T?off=4v6p3us7&checkoutMode=10&bid=169057200307610&bid=1690569217596&offDiscount=MITAD" class="pricing-action">Comprar</a>
         </div>
     </div>
 	
@@ -287,15 +288,15 @@
         <!-- Contratar / Comprar -->
         <div class="table-buy">
             <p>$29<sup><span style="text-decoration: line-through; color: black;">/ $59USD</span></sup></p>
-            <a target="_blank" href="https://pay.hotmart.com/W79687857T?off=x8o33vqz&checkoutMode=10" class="pricing-action">Comprar</a>
+            <a target="_blank" href="https://payment.hotmart.com/next/W79687857T?off=rkkgt2so&checkoutMode=10&bid=16905715913001010&bid=1690569217596&offDiscount=MITAD" class="pricing-action">Comprar</a>
         </div>
     </div>
 	
-        <div class="pricing-table">
-      <h3 class="pricing-title">Servicio automatico</h3>
+           <div class="pricing-table">
+      <h3 class="pricing-title">Servicio automático</h3>
       <!-- Lista de Caracteristicas / Propiedades -->
       <ul class="table-list">
-          <li>✅ BOT automatico de señales (De por vida) </li>
+          <li>✅ BOT automático de señales (De por vida) </li>
           <li>✅ Curso de Trading (De por vida) </li>
   <li>✅Señales de lunes a sábado </li>
 <li>✅Psicología en el trading <span></span></li>
@@ -312,38 +313,7 @@
       </div>
   </div>
 </div>
-
-<section class="container">
-    <div class="container-box">
-      <div class="container-img">
-        <img src="https://cdn-icons-png.flaticon.com/128/3645/3645796.png">
-      </div>
-      <div class="container-text">
-        <h4>+400</h4>
-        <p>Transacciones </p>
-      </div>
-    </div>
-
-    <div class="container-box">
-      <div class="container-img">
-        <img src="https://cdn-icons-png.flaticon.com/128/470/470238.png">
-      </div>
-      <div class="container-text">
-        <h4>+638</h4>
-        <p>Clientes satisfechos</p>
-      </div>
-    </div>
-
-    <div class="container-box">
-      <div class="container-img">
-        <img src="https://cdn-icons-png.flaticon.com/128/4230/4230867.png">
-      </div>
-      <div class="container-text">
-        <h4>+480</h4>
-        <p>Clientes actuales</p>
-        <p></p>
-      </div>
-    </div>
+</div>
 
 
   </section>
