--- a/index.html
+++ b/index.html
@@ -422,17 +422,17 @@
            <div class="product1" id="testimonios">
                <div class="box-container1">
                <div class="box1">
-                      <img width="100%" height="100%"  src=".//img/photo1685720433.jpeg" alt="Estrategias digitales"></img>
+                      <img width="100%" height="100%"  src=".//img/photo_5154550708069051460_y.jpg" alt="Estrategias digitales"></img>
                    </div>
                    <div class="box1">
-                    <img  width="100%" height="100%" src="./img/photo1685720433 (2).jpeg" alt="Estrategias digitales"></img>
+                    <img  width="100%" height="100%" src="./img/photo_5154550708069051459_y.jpg" alt="Estrategias digitales"></img>
                     
                 </div>
                 <div class="box1">
-                    <img  width="100%" height="100%" src="./img/photo1685720433 (3).jpeg" alt="Estrategias digitales"></img>
+                    <img  width="100%" height="100%" src="./img/photo_5154550708069051462_y.jpg" alt="Estrategias digitales"></img>
                 </div>
                 <div class="box1">
-                    <img  width="100%" height="100%" src="./img/photo1685720433 (4).jpeg" alt="Estrategias digitales"></img>
+                    <img  width="100%" height="100%" src="./img/photo_5154550708069051461_y.jpg" alt="Estrategias digitales"></img>
                 </div>
         
                </div>
