--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                   </div>
              
                   <br>
-                  <h1 class="heading2" style="font-family: salsa;" >PERO ESO NO ES TODO…. TAMBIÉN TENDRÁS 2 BONOS PREMIUM EXTRA <span> ¡TOTALMENTE GRATIS!</span></h1>
+                  <h1 class="heading2" style="font-family: salsa;" >PERO ESO NO ES TODO…. TAMBIÉN TENDRÁS 2 <span> ¡ BONOS PREMIUM EXTRA!</span></h1>
                   <div class="blog-card">
                     <div class="meta">
                       <div class="photo" style="background-image: url(./img/biblioteca.jpg)"></div>
