--- a/index.html
+++ b/index.html
@@ -252,33 +252,13 @@
         </div>
     </div>
 	
-	  <div class="pricing-table">
-        <h3 class="pricing-title">  Señales x6 meses</h3>
-        <!-- Lista de Caracteristicas / Propiedades -->
-        <ul class="table-list">
-            <li>✅Señales de lunes a viernes (x 6 meses) </li>
-            <li>✅Videos iniciales </li>
-            <li>✅Psicología en el trading <span></span></li>
-            <li>✅Plan de trading <span></span></li>
-            <li>✅Bitácora + Biblioteca <span></span></li>
-            <li>✅Soporte 24/7<span></span></li>
-            <li>❌Sin acceso al curso<span></span></li>
-		 <li>❌Sin actualizaciones<span></span></li>
-        </ul>
-        <!-- Contratar / Comprar -->
-        <div class="table-buy">
-            <p>$38<sup><span style="text-decoration: line-through; color: black;">/ $75USD</span></sup></p>
-            <a target="_blank" href="https://payment.hotmart.com/next/W79687857T?off=4v6p3us7&checkoutMode=10&bid=169057200307610&bid=1690569217596&offDiscount=MITAD" class="pricing-action">Comprar</a>
-        </div>
-    </div>
-	
            <div class="pricing-table">
-      <h3 class="pricing-title">Servicio automático</h3>
+      <h3 class="pricing-title">Servicio automático </h3>
       <!-- Lista de Caracteristicas / Propiedades -->
       <ul class="table-list">
-          <li>✅ BOT automático de señales (De por vida) </li>
-          <li>✅ Curso de Trading (De por vida) </li>
-  <li>✅Señales de lunes a sábado </li>
+          <li>✅ BOT automático de señales </li>
+         <li>✅ Curso de Trading (De por vida) </li>
+<li>✅Señales de lunes a viernes (x 3 meses) </li>
 <li>✅Psicología en el trading <span></span></li>
    <li>✅Acceso a actualizaciones <span></span></li>           
           <li>✅Plan de trading <span></span></li>
